--- a/public/templates/admin/positions.html
+++ b/public/templates/admin/positions.html
@@ -89,7 +89,7 @@
 
         setInterval(function(){
             var coin = $('#txtCoin').val();
-            showCoinPositions(coin);
+            searchPositions(coin);
         },1000);
     });
 
