--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -20,7 +20,7 @@
                 <option value="">--请选择--</option>
                 <option value="wait">运行中</option>
                 <option value="consign">已委托未成交</option>
-                <option value="sucess">已完成</option>
+                <option value="success">已完成</option>
                 <option value="part_success">部分成功</option>
                 <option value="will_cancel">已标记取消未完成</option>
                 <option value="canceled">已取消</option>
