--- a/public/templates/layouts/admin-master.html
+++ b/public/templates/layouts/admin-master.html
@@ -31,9 +31,10 @@
     <div class="wrapper">
         <div style="float: left;">
             <a href="/admin/plan">策略计划</a>
-            <a href="/admin/positions">账户仓位</a>
+            <a href="/admin/priceDifferences">市场差价</a>
             <a href="/admin/trade">委托列表</a>
             <a href="/admin/wallets">资金管理</a>
+            <a href="/admin/positions">账户仓位</a>
         </div>
         <div style="float: right;">
             <a href="/admin">Admin</a>
