--- a/public/templates/admin/trade.html
+++ b/public/templates/admin/trade.html
@@ -14,7 +14,7 @@
 
             status:
             <select id="inquirystatus" name="status" >
-                <option value=""></option>
+                <option value="">--请选择--</option>
                 <option value="wait">运行中</option>
                 <option value="consign">已委托未成交</option>
                 <option value="success">已完成</option>
@@ -31,14 +31,16 @@
            
             <input type="button" id="btnSearch" value="查询" />
             <button onClick="document.location.reload()">重置</button>
-            <!-- <div class="checkbox "></div> -->
+
             <label><input type="checkbox" id="showAll">包含已撤销委托</label>
             <a href="javascript:void(0)" id="showExceptionOrders">异常委托单</a>
+
+            <input type="button" id="btnReport" value="展开" style="float:right">
         </div>
-        <table style="width: 1044px; background-color: #C2DAFA;">
-            <tr id="show" style='text-align: center;'>
-            </tr>
-        </table> 
+            <div id="report" style="width: 1044px;"> 
+                
+            </div>
+
         <div id="FlexiGrid_ContentDiv" onLoad="goPage(1,10);">
             <table id="FlexiGrid_ContentTable" style="display: none;">
             </table>
@@ -100,7 +102,7 @@
         });
 
         $('select[name="sites"]').each(function(){
-            $('<option/>').appendTo(this).val('').html('');
+            $('<option/>').appendTo(this).val('').html('--请选择--');
             for(var i = 0; i < _business.sites.length;i++){
                 var site = _business.sites[i];
                 $('<option/>').appendTo(this).val(site).html(site);
@@ -109,7 +111,7 @@
         });
 
         $('select[name="symbols"]').each(function(){
-            $('<option/>').appendTo(this).val('').html('');
+            $('<option/>').appendTo(this).val('').html('--请选择--');
             var group = $(this).attr('data-group');
             var site = $(this).val();
             var $element = $(w.format('select[name="symbols"][data-group="{0}"]',group));
@@ -120,7 +122,7 @@
         $('select[name="sites"]').change(function(){
             if($('select[name="sites"]').val()==''){
                 $('#hide').hide();
-                $('select[name="symbols"]').val('').html('');
+                $('select[name="symbols"]').val('').html('--请选择--');
                 
             }else{
                 $('#hide').show();
@@ -135,7 +137,9 @@
         });
         
         $('#btnSearch').click(function(){
-            showReports();
+            _symbolAmounts =[];
+            $("#report").empty();
+            // showReports();
 
             // console.log($("#datetime").val());
             var newParams = [
@@ -148,6 +152,13 @@
             $("#FlexiGrid_ContentTable").setNewExtParam(newParams);
             $("#FlexiGrid_ContentTable").flexReload();
         });
+
+        $("#report").hide();
+
+        $("#btnReport").click(function(){
+            $("#report").toggle('slow');
+            $(this).val($(this).val()=="展开"?"隐藏":"展开");
+        })
 
         $('#showAll').change(function(){
             var newParams = [
@@ -235,18 +246,20 @@
     };
 
     function showReports(){
+        
         var amount; //总成交量
-        var profit = 0;  //利润
+        var middle = 0; //总价
         var multipleWarehouse = 0; //多仓
         var shortPosition = 0; //空仓
         
         for(var i = 0,l =_bargainAmountSum.length; i< l ;i++){
             amount = (_bargainAmountSum[i]._id.side=="buy"?_bargainAmountSum[i].bargainAmount:-_bargainAmountSum[i].bargainAmount);
-            profit = (_bargainAmountSum[i].total/_bargainAmountSum[i].sum);
+
+            middle = _bargainAmountSum[i].total;
 
             var symbolItem = getItem(_bargainAmountSum[i]._id.site,_bargainAmountSum[i]._id.symbol); 
             symbolItem.amount += amount;
-            symbolItem.profit += profit;
+            symbolItem.middle += middle;
 
             if(amount > 0 ){
                 symbolItem.multipleWarehouse += amount;
@@ -255,20 +268,21 @@
             }
         }
 
-        var arr= []; // 
-        var result = {};//
-        var cc =[]; //
+        var arr= []; // {eos#btc,btc#cny,btc#usd}
+        var result = {};// {[eos#btc:amount:400 data:Array(1)0:{site: "okex", symbol: "eos#btc", amount: 400, profit: 2000, multipleWarehouse: 400, …} multipleWarehouse:400 profit:2000 shortPosition:0]}
+        
         for (var i = 0; i < _symbolAmounts.length; i++) {
             if(arr.indexOf(_symbolAmounts[i].symbol) == -1){
                 arr.push(_symbolAmounts[i].symbol);
             }
         }
+        
 
         for (var i = 0; i < arr.length; i++) {
             var amount = 0;
             var profit = 0;
             var multipleWarehouse = 0;
-            var shortPosition =0;
+            var shortPosition = 0;
 
             result[arr[i]] = {
                 amount: 0,
@@ -283,7 +297,7 @@
                     amount += _symbolAmounts[j].amount;
                     multipleWarehouse += _symbolAmounts[j].multipleWarehouse;
                     shortPosition +=  _symbolAmounts[j].shortPosition;
-                    profit += _symbolAmounts[j].profit;
+                    profit -=  _symbolAmounts[j].middle;
 
                     result[arr[i]].amount = amount;
                     result[arr[i]].multipleWarehouse = multipleWarehouse;
@@ -294,27 +308,32 @@
             }
         }
 
+        $("#report").empty("");
         for(var key in result ){
-            var html ="<div style='border:1px solid;width:50%;float:left;'><table><thead style='border-bottom:1px dashed;'><tr><td>币种:<span style='color:red;'>" + key + 
-                "</span>,</td><td>总建仓:<span style='color:red;'>" + result[key].amount +
-                "</span>,</td><td>总多仓:<span style='color:red;'>" + result[key].multipleWarehouse +
-                "</span>,</td><td>总空仓:<span style='color:red;'>" + result[key].shortPosition +
-                "</span>,</td><td>总利润:<span style='color:red;'>" + result[key].profit +
-                "</span></td></tr></thead><tbody><tr><td colspan='5'>&nbsp;&nbsp;&nbsp;其中:</td></tr>";
+            var html ="<div style='border:1px solid #A9A9A9;width:50%;float:left;'><table><thead style='border-bottom:1px dashed #A9A9A9;'><tr><td>币种:<span style='color:red;'>" + key + 
+                "</span></td><td>总建仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].amount || 0),2) +
+                "</span>,</td><td>总多仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].multipleWarehouse || 0),2) +
+                "</span>,</td><td>总空仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].shortPosition || 0),2) +
+                    //result[key].profit需要正数转负数
+                "</span>,</td><td>总利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].profit || 0),2) +
+                "</span></td></tr></thead><tbody><tr><td colspan='5'>其中:</td></tr>";
 
-            for(var i = 0; i < result[key].data.length;i++){
-                html+="<tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;网站:<span style='color:red;'>" + result[key].data[i].site +
-                    "</span>,</td><td>建仓:<span style='color:red;'>" + result[key].data[i].amount +
-                    "</span>,</td><td>多仓:<span style='color:red;'>" + result[key].data[i].multipleWarehouse +
-                    "</span>,</td><td>空仓:<span style='color:red;'>" + result[key].data[i].shortPosition +
-                    "</span>,</td><td>利润:<span style='color:red;'>" + result[key].data[i].profit + "</span></td></tr>"; 
+        
+            for(var i = 0; i<result[key].data.length;i++){
+                html+="<tr><td>网站:<span style='color:red;'>" +  result[key].data[i].site +
+                    "</span></td><td>建仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].amount || 0),2) +
+                    "</span>,</td><td>多仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].multipleWarehouse || 0),2) +
+                    "</span>,</td><td>空仓:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].shortPosition || 0),2) +
+                    "</span></td></tr>"; 
             }
 
             html+="</tbody></table></div>";
-            $("#show").append(html);
+            $("#report").append(html);
         }  
     }
 
+    //"</span>,</td><td>总利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].profit || 0),4) +
+        //<td>利润:<span style='color:red;'>" + w.toDecimal(Math.abs(result[key].data[i].profit || 0),4) + "</span></td>
 
     //分页页码
     function flexiGridInited(options) {
@@ -360,8 +379,9 @@
 
         if(typeof options.bargainAmountSum == 'string'){
             _bargainAmountSum = JSON.parse(options.bargainAmountSum); 
+            showReports();
         }
-        showReports();
+        // showReports();
 
         var  data = {
             "page": options.page,
@@ -393,7 +413,7 @@
                     {"cellHtml": order.price },
                     {"cellHtml": w.toDecimal(Math.abs(order.bargainAmount || 0),4)},
                     {"cellHtml": w.toDecimal(Math.abs(order.avgPrice || 0),3)},
-                    {"cellHtml": order.status},
+                    {"cellHtml": order.status}
                 ]
             };
             data.rows.push(row);
@@ -412,7 +432,7 @@
     };
 
     function initSymbolItems($element,site){
-        $element.html('');
+        $element.html('--请选择--');
         var symbols = [];
         for(var i = 0; i < _business.symbols.length;i++){
             if(_business.symbols[i].site == site){
@@ -438,7 +458,7 @@
         }
 
         if(!t){
-            t = { site:site, symbol:coinsPair, amount: 0, profit: 0, multipleWarehouse: 0, shortPosition: 0 } 
+            t = { site:site, symbol:coinsPair, amount: 0, middle: 0, multipleWarehouse: 0, shortPosition: 0 } //profit: 0,
             _symbolAmounts.push(t);
         }
         
